--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "4.12.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "fastify": "4.15.0",
     "pino": "8.11.0",
@@ -22,6 +23,7 @@
     "zod": "3.21.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "18.15.11",
     "@typescript-eslint/eslint-plugin": "5.57.0",
     "@typescript-eslint/parser": "5.57.0",
