--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "lint": "eslint . --ext .ts --fix --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prisma:migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +32,8 @@
     "prisma": "4.12.0",
     "tsup": "6.7.0",
     "tsx": "3.12.6",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.32.2"
   }
 }
