--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "lint": "eslint . --ext .ts --fix --ignore-path .gitignore",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest run",
     "prisma:migrate": "prisma migrate dev"
   },
   "keywords": [],
