--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsup src --out-dir build",
     "lint": "eslint . --ext .ts --fix --ignore-path .gitignore",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "prisma:migrate": "prisma migrate dev"
   },
   "keywords": [],
@@ -28,6 +29,7 @@
     "@types/node": "18.15.11",
     "@typescript-eslint/eslint-plugin": "5.57.0",
     "@typescript-eslint/parser": "5.57.0",
+    "@vitest/coverage-v8": "0.32.2",
     "eslint": "8.37.0",
     "prisma": "4.12.0",
     "tsup": "6.7.0",
