--- a/package.json
+++ b/package.json
@@ -1,41 +1,32 @@
 {
   "name": "ignite-node_project-02",
+  "description": "## Proposta do projeto:   Construir uma API para sistemas de check-in.   **exemplo: Gympass** ---",
   "version": "1.0.0",
-  "description": "Construir uma API para sistemas de check-in, ex: Gympass.",
   "main": "index.js",
   "scripts": {
-    "start": "node build/server.js",
-    "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "start": "node build/server.js",
     "lint": "eslint . --ext .ts --fix --ignore-path .gitignore",
-    "test": "vitest run",
-    "test:coverage": "vitest run --coverage",
-    "prisma:migrate": "prisma migrate dev"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["gympass", "node.js", "checkIn"],
   "author": "",
+  "engines": {
+    "node": "20.9.0"
+  },
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "4.12.0",
-    "bcryptjs": "2.4.3",
-    "dotenv": "16.0.3",
-    "fastify": "4.15.0",
-    "pino": "8.11.0",
-    "pino-pretty": "10.0.0",
-    "zod": "3.21.4"
+    "fastify": "4.25.2",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "2.4.2",
-    "@types/node": "18.15.11",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
-    "@vitest/coverage-v8": "0.32.2",
-    "eslint": "8.37.0",
-    "prisma": "4.12.0",
-    "tsup": "6.7.0",
-    "tsx": "3.12.6",
-    "typescript": "5.0.3",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.32.2"
+    "@types/node": "20.11.4",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
+    "eslint": "8.56.0",
+    "tsup": "8.0.1",
+    "tsx": "4.7.0",
+    "typescript": "5.3.3"
   }
 }
